# CodeSnapAI

./: .codesage.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README-zh.md  README.md  action.yml  alembic.ini  codesage.db  command-test.md  docker-compose.yml  go_test_script.yaml  pyproject.toml  python_test_codesage.yaml  python_test_script.yaml  quickstart.md  setup.py  test.go
.codesage/snapshots/: index.json  v1.json  v10.json  v11.json  v12.json  v13.json  v14.json  v15.json  v16.json  v17.json  v18.json  v19.json  v2.json  v20.json  v21.json  v22.json  v23.json  v24.json  v25.json  v26.json  v27.json  v28.json  v29.json  v3.json  v30.json  v31.json  v32.json  v33.json  v34.json  v35.json  v36.json  v37.json  v38.json  v39.json  v4.json  v40.json  v41.json  v42.json  v43.json  v44.json  (+7 more)
.github/workflows/: analyzer-tests.yml  ci.yml  codesnap_audit.yml  graph-integration-tests.yml
alembic/: env.py
codesage/analyzers/: ast_models.py  base.py  go_parser.py  java_parser.py  parser_factory.py  python_parser.py  shell_parser.py
codesage/audit/: logger.py  models.py
codesage/ci/: policy.py
codesage/cli/: formatter.py  interactive.py  main.py  plugin_loader.py  progress.py  validation.py
codesage/config/: audit.py  ci.py  defaults.py  governance.py  history.py  integrations.py  jules.py  llm.py  loader.py  org.py  policy.py  risk_baseline.py  rules_python_baseline.py  snapshot_python_defaults.py  web.py
codesage/core/: interfaces.py
codesage/git/: miner.py
codesage/governance/: jules_bridge.py  orchestrator.py  patch_manager.py  rollback_manager.py  sandbox.py  task_builder.py  task_models.py  task_orchestrator.py  validator.py
codesage/graph/: __init__.py  graph_builder.py
codesage/history/: diff_engine.py  diff_models.py  git_miner.py  models.py  regression_detector.py  store.py  trend_builder.py  trend_models.py
codesage/integrations/: file_export.py  webhook.py
codesage/jules/: bridge.py  cookbook.py  monitor.py  prompt_builder.py  prompt_templates.py
codesage/llm/: client.py  context_builder.py  factory.py  issue_suggester.py  prompts.py
codesage/models/: issue.py
codesage/org/: aggregator.py  models.py  report_generator.py  report_models.py
codesage/policy/: dsl_models.py  engine.py  parser.py
codesage/report/: format_json.py  format_junit.py  format_markdown.py  generator.py  summary_models.py
codesage/reporters/: __init__.py  base.py  console.py  github_pr.py  json_reporter.py
codesage/risk/: propagation.py  python_complexity.py  risk_scorer.py
codesage/rules/: base.py  engine.py  jules_specific_rules.py  python_ruleset_baseline.py
codesage/sandbox/: validator.py
codesage/semantic_digest/: __init__.py  (+5 more)
docs/: analyzer-development.md  architecture.md  cli_reference.md  custom_templates.md  graph-query-dsl.md  phase1-test-report.md  phase2-storage-schema.md  plugin_development.md  semantic_analysis.md  snapshot_format.md
semantic-snapshot/: go-semantic-snapshot-v4.py  py-semantic-snapshot-v3.py
tests/: test_governance_loop.py  test_patch_rollback.py
web/: index.html
(+240 files in other folders)
